[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano-spo-cli"
version = "1.0.0"
description = "Professional CLI tool for Cardano Stake Pool Operator wallet setup"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cardano SPO CLI", email = "support@cardano-spo-cli.org"}
]
keywords = ["cardano", "stake-pool", "cli", "wallet", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "cryptography>=3.4.0",
    "mnemonic>=0.20.0",
    "bech32>=1.2.0",
    "colorama>=0.4.4",
    "tqdm>=4.62.0",
]

[project.scripts]
cspocli = "cardano_spo_cli.cli:main"

[project.urls]
Homepage = "https://github.com/cardano-spo-cli"
Documentation = "https://github.com/cardano-spo-cli#readme"
Repository = "https://github.com/cardano-spo-cli"
Issues = "https://github.com/cardano-spo-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cardano_spo_cli*"]

[tool.setuptools.package-data]
cardano_spo_cli = ["*.txt", "*.md"] 