[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano-spo-cli"
version = "1.1.0"
description = "Professional Cardano Stake Pool Operator CLI"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "danbaruka", email = "danbaruka@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "cryptography>=3.4.0",
    "mnemonic>=0.20.0",
    "bech32>=1.2.0",
    "colorama>=0.4.4",
    "tqdm>=4.62.0",
]

[project.scripts]
cspocli = "cardano_spo_cli.cli:main"
